different start script for development

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.js",
+    "start": "node index.js",
+    "server-dev": "nodemon index.js",
     "build": "cd client && npm install && npm run build",
     "heroku-postbuild": "cd client && npm install --only=dev && npm install && npm run build",
     "dev": "concurrently --kill-others \"nodemon index.js\" \"cd client && npm start\""
